Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
              }
           ],
           18: [
-            { type: 'video', src: 'contenu/Starmania, lopéra rock sur scène à Paris  Archive INA.mp4', text: 'Archive INA, Starmania version 1979.' },
             { type: 'video', src: 'contenu/Télégramme de Zéro à Stella.mp4', text: 'Évolution de la scène du télégramme entre les différentes versions du spectacle.' },
           ],
           20: [
@@ -152,7 +151,7 @@
             { type: 'video', src: 'contenu/Éclipse, nuit en fugue     -     le livre (version longue).mp4', text: 'Le livre Éclipse, nuit en fugue (version longue).' }
           ],
           46: [
-            { type: 'video', src: 'contenu/La saison 4  de la Web série Andys gone.mp4', text: 'Saison 4 de la web série Andy\'s gone.' }
+            { type: 'video', src: 'contenu/La saison 4  de la Web série Andys gone.mp4', text: 'Episode 1 de la web série Andy\'s gone.' }
           ],
           60: [
             { type: 'text', content: 'De manière plus détaillée, j\'aimerais remercier tout particulièrement...' },
@@ -243,3 +242,4 @@
 
 
 </html>
+
