Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             { type: 'video', src: 'contenu/Éclipse, nuit en fugue     -     le livre (version longue).mp4', text: 'Le livre Éclipse, nuit en fugue (version longue).' }
           ],
           46: [
-            { type: 'video', src: 'contenu/La saison 4  de la Web série Andys gone.mp4', text: 'Episode 1 de la web série Andy\'s gone.' }
+            { type: 'video', src: 'Andys Gone - Épisode 1 Saison 1 - La Web Série (1).mp4', text: 'Episode 1 de la web série Andy\'s gone.' }
           ],
           60: [
             { type: 'text', content: 'De manière plus détaillée, j\'aimerais remercier tout particulièrement...' },
@@ -242,4 +242,5 @@
 
 
 </html>
+
 
